# auto-prompt-generation

./: .gitignore  MANIFEST.in  Makefile  README.md  auto_prompt_generation_original.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_installation.sh
auto_prompt_generation/: __init__.py  cli.py  core.py
docs/: project_structure.md
examples/: basic_usage.py  simple_example.py
tests/: conftest.py  test_cli.py  test_core.py
